--- a/web/CSS/login.css
+++ b/web/CSS/login.css
@@ -1,1 +1,7 @@
-.Content{Width:700px;height:480px;margin:auto;padding:10px;border:1px solid red;}
+.Content{Width:700px;height:450px;margin-top:10px;padding:10px;border:1px solid red;}
+fieldset{width:600px;margin:auto;padding-top:10px;text-align:center;font-size:22px;}
+#form{padding-top:100px;}
+td{width:300px;}
+button {border: solid #4CAF50;padding: 10px 35px;text-align: center;text-decoration: none;
+        display: inline-block;font-size: 16px;margin: 4px 2px;transition-duration: 1s;cursor: pointer;}
+button:hover {background-color: #4CAF50;color: white;}
