--- a/web/Admin/CSS/DashBoard.css
+++ b/web/Admin/CSS/DashBoard.css
@@ -1,13 +1,9 @@
 #Content{display:flex;flex-flow: row wrap;justify-content: center;overflow-y: auto;height:460px;}
-/* .box1{font-size:28px;width:250px;height:50px;border-radius:20px;background-color:rgb(3, 133, 165);box-shadow: 10px 10px rgb(179, 255, 0);margin:10px;text-align: center;padding:10px;} */
-.box{font-size:28px;width:250px;height:100px;border-radius:20px;background-color:rgb(3, 133, 165);margin:20px;text-align: center;padding-top:40px;}
-.box:hover{background-color:rgb(255, 102, 0);}
-.box a{text-decoration: none;color:rgb(0, 0, 0);}
-.box a:hover{color:rgb(255, 255, 255);}
-.m1{box-shadow: 10px 10px rgb(157, 152, 170);}
+.box{width:250px;height:100px;}
+.module_Items div a{text-decoration: none;color:white;font-size: 20px;display:block;line-height: 1.5;}
+.module_Items{font-size:26px;border-radius:20px;background-color:rgb(20, 19, 19);;margin:20px;text-align: center;padding: 10px;}
+.module_Items p{background-color: rgb(255, 102, 0);border-radius: 10px 10px 0 0; margin-bottom: 10px; color:white;font-weight: bold;}
+.module_Items div{width:300px;text-align: left;padding-left: 20px;}
+.m1, .module_Items{box-shadow: 10px 10px rgb(157, 152, 170);}
 .m2{box-shadow: 10px 10px rgb(255, 136, 0);}
-.m3{box-shadow: 10px 10px rgb(255, 0, 140);}
-.m4{box-shadow: 10px 10px rgb(0, 217, 255);}
-.m5{box-shadow: 10px 10px rgb(0, 255, 64);}
-.m6{box-shadow: 10px 10px rgb(255, 0, 0);}
-.m1:hover,.m2:hover,.m3:hover,.m4:hover,.m5:hover,.m6:hover{box-shadow: 10px 10px rgb(179, 255, 0);}
+.m1:hover,.m2:hover{box-shadow: 10px 10px rgb(179, 255, 0);}
