--- a/web/Admin/CSS/AddNewCourse.css
+++ b/web/Admin/CSS/AddNewCourse.css
@@ -1,6 +1,6 @@
-fieldset{width:430px;margin:auto;padding:10px 20px;text-align:center;font-size:30px;}
+fieldset{width:420px;margin:auto;padding:10px 10px;text-align:center;font-size:30px;}
 #Content{padding:30px;}
 td{width:200px;text-align: left;}
-input{height:25px;width:250px;}
+input[type='text']{height:25px;width:200px;}
 hr{margin: 10px 0px 10px;height:5px;background-color: red;border-style: none;}
 h1,h2{text-align: center;}
